--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,6 @@
 [theme]
 primaryColor="#f5a21d"
 backgroundColor="#f3f6f7"
-secondaryBackgroundColor="#d1def9"
+secondaryBackgroundColor="#c1c9dc"
 textColor="#000000"
+
